# USD-Cookbook

./: CMakeLists.txt
.github/workflows/: build.yml
concepts/: CMakeLists.txt
concepts/mesh_with_materials/cpp/: CMakeLists.txt  main.cpp
concepts/orphaned_over/cpp/: CMakeLists.txt
concepts/relationship_forwarding/cpp/: CMakeLists.txt
concepts/uniquify_an_instance/cpp/: CMakeLists.txt
concepts/variant_set_in_stronger_layer/cpp/: CMakeLists.txt
concepts/variant_set_production_shot/cpp/: CMakeLists.txt
features/: CMakeLists.txt
features/add_comment/cpp/: CMakeLists.txt
features/asset_info/cpp/: CMakeLists.txt
features/batch_namespace_edit/cpp/: CMakeLists.txt
features/caching/cpp/: CMakeLists.txt
features/caching/cpp/cache_utils/: CMakeLists.txt  main.cpp
features/caching/cpp/caching/: CMakeLists.txt
features/edit_targets/cpp/: CMakeLists.txt
features/enable_debugging/cpp/: CMakeLists.txt  main.cpp
features/notice_send/cpp/: CMakeLists.txt
features/notice_send/cpp/notice_send_custom/: CMakeLists.txt  main.cpp
features/notice_send/cpp/notice_send_global/: CMakeLists.txt  main.cpp
features/notices/cpp/: CMakeLists.txt  main.cpp
features/purposes/cpp/: CMakeLists.txt
features/sdf_change_block/cpp/: CMakeLists.txt  main.cpp
features/set_kind/cpp/: CMakeLists.txt
features/specializes/cpp/: CMakeLists.txt  main.cpp
features/time_varying_attributes_sdf/cpp/: CMakeLists.txt
features/usd_resolve_info/cpp/: CMakeLists.txt
features/userProperties/cpp/: CMakeLists.txt
features/value_caching/cpp/: CMakeLists.txt
features/value_clips/cpp/: CMakeLists.txt
features/value_clips/cpp/explicit/: CMakeLists.txt  main.cpp
features/value_clips/cpp/template_and_explicit/: CMakeLists.txt
features/world_bounding_box/cpp/: CMakeLists.txt  main.cpp
plugins/: CMakeLists.txt
plugins/plugin_metadata/cpp/: CMakeLists.txt
tricks/: CMakeLists.txt
tricks/attribute_source_check/cpp/: CMakeLists.txt
tricks/bound_material_finder/cpp/: CMakeLists.txt
tricks/copy_variant_set_to_prim/cpp/: CMakeLists.txt  main.cpp
tricks/fast_export/cpp/: CMakeLists.txt  main.cpp
tricks/flatten_layer_stack/cpp/: CMakeLists.txt  main.cpp
tricks/get_sdf_prim_path/cpp/: CMakeLists.txt
tricks/multi_payload/cpp/: CMakeLists.txt  main.cpp
tricks/stl_iteration/cpp/: CMakeLists.txt
tricks/stl_iteration2/cpp/: CMakeLists.txt
tricks/traverse_instanced_prims/cpp/: CMakeLists.txt
(+4 files in other folders)
