add_subdirectory(add_comment)
add_subdirectory(asset_info)
add_subdirectory(batch_namespace_edit)
add_subdirectory(caching)
add_subdirectory(edit_targets)
add_subdirectory(enable_debugging)
add_subdirectory(notice_send)
add_subdirectory(notices)
add_subdirectory(purposes)
add_subdirectory(sdf_change_block)
add_subdirectory(set_kind)
add_subdirectory(specializes)
add_subdirectory(time_varying_attributes_sdf)
add_subdirectory(usd_resolve_info)
add_subdirectory(userProperties)
add_subdirectory(value_caching)
add_subdirectory(value_clips)
add_subdirectory(world_bounding_box)
